# wolfram-os

./: .gitignore  CONTRIBUTING.md  EASTEREGGS.md  Makefile  README.md  capability-model.md  main.rs  mod.rs  panic.rs
.github/ISSUE_TEMPLATE/: bug.md  feature.md  security.md
.github/workflows/: ci.yml
docs/: architecture.md
wolfram/: Cargo.toml  rust-toolchain.toml
wolfram/.cargo/: config.toml
wolfram/src/: main.rs
wolfram/src/arch/: mod.rs
wolfram/src/arch/riscv64/: boot.S  linker.ld  mod.rs  serial.rs  trap.S  trap.rs
wolfram/src/kernel/: mod.rs  panic.rs  syscall.rs
wolfram/src/kernel/capabilities/: mod.rs
wolfram/src/kernel/ipc/: channel.rs  fastcall.rs  mod.rs
wolfram/src/kernel/memory/: bitmap.rs  mod.rs  vmo.rs
wolfram/src/kernel/scheduler/: mod.rs
