[package]
name = "wolfram"
version = "0.1.0"
edition = "2021"
authors = ["notvcto <vic@notvc.to>"]
description = "Wolfram kernel — capability-based microkernel for RISC-V"
license = "GPL-2.0-only"
repository = "https://github.com/notvcto/wolfram-os"

[dependencies]
bitflags = { version = "2.6", default-features = false }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
